touch-ups on forms and removed text-decoration on cards

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -65,6 +65,10 @@
   transform: scale(1.02);
 }
 
+.home-cards > a {
+  text-decoration: none;
+}
+
 .cards {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
