final touch-ups done

--- a/app/views/shared/_form.html.erb
+++ b/app/views/shared/_form.html.erb
@@ -1,4 +1,4 @@
-<div class="form-item">
+<div class="form-item p-4">
   <%= simple_form_for ([@item]) do |f| %>
   <h2>Create a new item</h2>
     <%= f.input :name %>
