--- a/app/views/shared/_modalbooking.html.erb
+++ b/app/views/shared/_modalbooking.html.erb
@@ -3,13 +3,38 @@
   <div class="modal-dialog modal-lg modal-dialog-centered modal-dialog-scrollable">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+        <h5 class="modal-title" id="exampleModalLabel">You currently have <%= pluralize @bookings.size, "booking" %></h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
       <div class="modal-body">
-        ...
+
+        <%if @bookings.empty?%>
+      <div class="card-product-none">
+        <div class="card-product-infos">
+          <h2 class="text-center"><i class="fas fa-sad-tear"></i></h2>
+          <p class="text-center">You don't have any bookings...</p>
+          <p class="text-center">Let's fix this by booking <strong><%= link_to "our products", items_path %></strong> .</p>
+        </div>
+      </div>
+    <%else%>
+      <% @bookings.each do |booking| %>
+
+        <% if booking.user == current_user %>
+          <div class="card-product">
+            <%= cl_image_tag booking.item.photo.key, height: 300, width: 400, crop: :fill %>
+            <div class="card-product-infos">
+              <h2><%= booking.item.name%></h2>
+              <p>You've booked me from <strong><%=booking.start%></strong> to <strong><%=booking.return%></strong>.</p>
+              <p><strong class="fas fa-comment"></strong> <%=booking.comment%></p>
+            </div>
+            <%= link_to "Edit This Booking", edit_booking_path(booking), class: "btn btn-info edit-book" %>
+            <%= link_to "Delete", booking_path(booking), method: :delete, data: {confirm: "Are You Sure?"}, class: "btn btn-danger delete-book" %>
+          </div>
+        <% end %>
+      <% end %>
+    <%end%>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
