fixed show card for item

--- a/app/assets/stylesheets/items/_items.scss
+++ b/app/assets/stylesheets/items/_items.scss
@@ -17,3 +17,16 @@
   position: sticky;
   top: 100px;
 }
+
+.item-name-show {
+  font-size: 30px;
+}
+
+.item-name-show.fas {
+  font-size: 30px;
+  color: rgb(39, 218, 116);
+}
+
+.fas.fa-star{
+  color: rgb(258, 180, 8);
+}
