--- a/app/views/shared/_reviewform.html.erb
+++ b/app/views/shared/_reviewform.html.erb
@@ -1,5 +1,5 @@
 <%= simple_form_for([@item, @review], remote: true) do |f|%>
   <%= f.input :comment %>
   <%= f.input :rating, collection: (0..5)%>
-  <%= f.submit class:"btn btn-ghost"%>
+  <%= f.submit class:"btn btn-success"%>
 <% end %>
