--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -20,7 +20,7 @@
             <p><strong class="fas fa-comment"></strong> <%=booking.comment%></p>
           </div>
           <%= link_to "Edit This Booking", edit_booking_path(booking), class: "btn btn-info edit-book" %>
-          <%= link_to "Delete", booking_path(booking), method: :delete, data: {confirm: "Are You Sure?"}, class: "btn btn-danger delete-book" %>
+          <%= link_to "Delete", booking_path(booking), method: :delete, data: {confirm: "Are You Sure?"}, class: "btn btn-danger delete-book", remote: true %>
         </div>
       <% end %>
       <br>
@@ -58,9 +58,9 @@
           <p><%= booking.item.name %></p>
         <% end %>
       </div>
-      
+
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <%= link_to 'Go Back to Home Page', root_path, class:'btn btn-secondary' %>
       </div>
     </div>
   </div>
