fixed the paynow button

--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -30,8 +30,8 @@
       <% end %>
       Total: <strong>Rs <%= @total %></strong>
       <hr>
-        <button type="button" class="btn btn-success" data-toggle="modal" data-target="#exampleModal">
-          Pay now
+        <button type="button" class="btn btn-success py-4 rounded-pill" data-toggle="modal" data-target="#exampleModal">
+          <h3 class="m-0"><strong>Pay now</strong> </h3>
         </button>
     <%end%>
   </div>
