user can now view an item within map

--- a/app/views/items/_info_window.html.erb
+++ b/app/views/items/_info_window.html.erb
@@ -11,3 +11,5 @@
 <% else %>
   <p><%= item.description %></p>
 <% end %>
+
+<%= link_to "More Info", item_path(item), class:"btn btn-primary btn-block"%>
