fixed the footer issue

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -90,7 +90,7 @@
   margin: 40px auto;
   background-size: cover;
   background-position: center;
-  height: 60vh;
+  min-height: 60vh;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
   padding: 16px;
 }
