--- a/app/assets/stylesheets/items/_items.scss
+++ b/app/assets/stylesheets/items/_items.scss
@@ -9,13 +9,19 @@
   }
   #map{
     position: sticky;
-    top: 190px;
+    top: 71px;
   }
 }
 
 .items-top{
   position: sticky;
-  top: 100px;
+  top: 71px;
+  z-index: 999;
+  width: 100%;
+  .form-group{
+    width: 60%;
+    margin: 0 1rem;
+  }
 }
 
 .item-name-show {
