--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,4 +1,4 @@
-<div class="container mt-4">
+<div class="container mt-4 vh-100">
   <div class="cards-item">
     <div class="card-item">
       <%= link_to items_path do %>
